<resources>
    <string name="app_name">RecyclerView_ActionViewApp</string>
    <string name="cat">Catty</string>
    <string name="dog">Grivei</string>
    <string name="pig">Guiti</string>
    <string name="cow">Lana</string>
    <string name="rabbit">Puffy</string>
    <string name="star_1">1</string>
    <string name="star_2">2</string>
    <string name="star_3">3</string>
    <string name="star_4">4</string>
    <string name="star_5">5</string>
    <string name="title">Petagram</string>
</resources>